# target-ducklake

./: .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml  pytest.ini  schema_migration.sql  tox.ini
target_ducklake/: __init__.py  __main__.py  connector.py  flatten.py  logger.py  parquet_utils.py  sinks.py  target.py
tests/: __init__.py  test_comprehensive.py
