[project]
name = "target-ducklake"
version = "0.0.2"
description = "Singer target for ducklake, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Steven Wang", email = "steven@definite.app" }]
keywords = [
    "ELT",
    "ducklake",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.9"
dependencies = [
    "duckdb~=1.4.0",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "ruff>=0.12.5",
    "singer-sdk[faker]~=0.46.4",
    "sqlalchemy>=2.0.41",
]

[project.optional-dependencies]
s3 = [
    "s3fs~=2025.5.0",
]

[project.scripts]
# CLI declaration
target-ducklake = 'target_ducklake.target:Targetducklake.cli'

[dependency-groups]
dev = [
    { include-group = "test" },
]
test = [
    "pytest>=8",
    "singer-sdk[testing]",
]

[tool.mypy]
warn_unused_configs = true

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = [
    "hatchling>=1,<2",
]
build-backend = "hatchling.build"
